test/deprecated/IO/specailWritersReturnErrorMessage/wrbWrite.good
wrbWrite.chpl:4: error: illegal use of boolean return value from 'write'. Note: this functionality is deprecated; recompile with -sWritersReturnBool=true to continue using the deprecated behavior.
